--- a/index.html
+++ b/index.html
@@ -64,27 +64,27 @@
             Experiences
         </h1>
         <div class="last-section">
-            <div class=" table-1" id="full-stack">
+            <div class=" table-1 hover-effect-1" id="full-stack">
                 <h1>
                     Full Stack Developer
                 </h1>
                 <h3 class="orange h3-style">
                     2021-Present | Pro Level Developer
                 </h3>
-                <p class="p-style">
+                <p>
                     I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.
                 </p>
             </div>
-            <div class=" table-1" id="baby-web">
+            <div class=" table-1 hover-effect-2" id="baby-web">
                 <h1>
                     Baby Web Developer
                 </h1>
                 <h3 class="orange h3-style">
                     2020-2021 | Programming Hero Learner
                 </h3>
-                <p class="p-style ">
+                <p>
                     They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. 
                 </p>
             </div>
