--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3 class="orange h3-style">
                     2021-Present | Pro Level Developer
                 </h3>
-                <p class="p-style">
+                <p class="p-style-1">
                     I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.
@@ -84,7 +84,7 @@
                 <h3 class="orange h3-style">
                     2020-2021 | Programming Hero Learner
                 </h3>
-                <p class="p-style">
+                <p class="p-style-1">
                     They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. 
                 </p>
             </div>
