--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <section class="top-section">
-        <div class="half-width">
+        <div class="half-width top-padding">
             <h1>
                 Welcome To
             </h1>
@@ -28,12 +28,14 @@
             <p class="p-style">
                 You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development Hero.
             </p>
         
             <a class="button" target="_blank" href="https://www.facebook.com/R.I.Akash/">INBOX ME</a>
         </div>
-        <div class="half-width">
+        <div class="half-width top-padding">
             <img src="image/my-bg.png" alt="">
         </div>
 
@@ -42,7 +44,7 @@
         <div class="half-width">
             <img src="image/my-bg2.png" alt="">
         </div>
-        <div class="half-width">
+        <div class="half-width mid-1">
             <h1>
                 Dream Big
             </h1>
@@ -51,6 +53,7 @@
             </h3>
             <p class="p-style">
                 I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
             
@@ -65,27 +68,27 @@
         </h1>
         <div class="last-section">
             <div class=" table-1 hover-effect-1" id="full-stack">
-                <h1>
+                <h2>
                     Full Stack Developer
-                </h1>
+                </h2>
                 <h3 class="orange h3-style">
                     2021-Present | Pro Level Developer
                 </h3>
                 <p class="p-style-1">
                     I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
-                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. 
                 </p>
             </div>
             <div class=" table-1 hover-effect-2" id="baby-web">
-                <h1>
+                <h2>
                     Baby Web Developer
-                </h1>
+                </h2>
                 <h3 class="orange h3-style">
                     2020-2021 | Programming Hero Learner
                 </h3>
                 <p class="p-style-1">
-                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. 
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. 
                 </p>
             </div>
         </div>
