--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Welcome To
             </h1>
             <h1>
-                <span class="orange">Laddu's</span> World
+                <span class="orange">AKASH</span> World
             </h1>
             <h3 class="h3-style">
                 Build Climber and Train Stopper
